--- a/grc/lte_pbch_demux_vcvc.block.yml
+++ b/grc/lte_pbch_demux_vcvc.block.yml
@@ -9,11 +9,11 @@ parameters:
     label: RX antennas
     dtype: int
     default: '1'
-    hide: ${ 'part' if vlen == 1 else 'none' }
+    #hide ${ 'part' if vlen == 1 else 'none' }
 -   id: N_rb_dl
     label: resource blocks
     dtype: int
-    hide: ${ 'part' if vlen == 1 else 'none' }
+    #hide ${ 'part' if vlen == 1 else 'none' }
 
 inputs:
 -   domain: stream
@@ -30,6 +30,6 @@ outputs:
 
 templates:
     imports: import lte
-    make: lte.pbch_demux_vcvc(${N_rb_dl}, ${rxant}, "$id")
+    make: lte.pbch_demux_vcvc(${N_rb_dl}, ${rxant}, '${id}')
 
 file_format: 1
