--- a/grc/lte_pcfich_demux_vcvc.block.yml
+++ b/grc/lte_pcfich_demux_vcvc.block.yml
@@ -8,7 +8,7 @@ parameters:
 -   id: N_rb_dl
     label: resource blocks
     dtype: int
-    hide: ${ 'part' if vlen == 1 else 'none' }
+    #hide ${ 'part' if vlen == 1 else 'none' }
 -   id: key
     label: Input key
     dtype: string
@@ -28,6 +28,6 @@ outputs:
 
 templates:
     imports: import lte
-    make: lte.pcfich_demux_vcvc(${N_rb_dl}, ${key}, ${out_key}, "cell_id", "$id")
+    make: lte.pcfich_demux_vcvc(${N_rb_dl}, ${key}, ${out_key}, "cell_id", '${id}')
 
 file_format: 1
