--- a/grc/lte_pss_tagger_cc.block.yml
+++ b/grc/lte_pss_tagger_cc.block.yml
@@ -25,6 +25,6 @@ outputs:
 
 templates:
     imports: import lte
-    make: lte.pss_tagger_cc(${fftl}, "$id")
+    make: lte.pss_tagger_cc(${fftl}, '${id}')
 
 file_format: 1
