--- a/grc/lte_bch_crc_check_ant_chooser_bb.block.yml
+++ b/grc/lte_bch_crc_check_ant_chooser_bb.block.yml
@@ -22,6 +22,6 @@ outputs:
 
 templates:
     imports: import lte
-    make: lte.bch_crc_check_ant_chooser_bb("$id")
+    make: lte.bch_crc_check_ant_chooser_bb('${id}')
 
 file_format: 1
