--- a/grc/lte_mimo_sss_calculator.block.yml
+++ b/grc/lte_mimo_sss_calculator.block.yml
@@ -8,7 +8,7 @@ parameters:
 -   id: rxant
     label: RX antennas
     dtype: int
-    hide: ${ 'part' if vlen == 1 else 'none' }
+    #hide ${ 'part' if vlen == 1 else 'none' }
 
 inputs:
 -   domain: stream
