--- a/grc/lte_mimo_sss_tagger.block.yml
+++ b/grc/lte_mimo_sss_tagger.block.yml
@@ -8,11 +8,11 @@ parameters:
 -   id: rxant
     label: RX antennas
     dtype: int
-    hide: ${ 'part' if vlen == 1 else 'none' }
+    #hide ${ 'part' if vlen == 1 else 'none' }
 -   id: N_rb_dl
     label: resource blocks
     dtype: int
-    hide: ${ 'part' if vlen == 1 else 'none' }
+    #hide ${ 'part' if vlen == 1 else 'none' }
 
 inputs:
 -   domain: stream
