--- a/grc/lte_pss_symbol_selector_cvc.block.yml
+++ b/grc/lte_pss_symbol_selector_cvc.block.yml
@@ -8,7 +8,7 @@ parameters:
 -   id: fftl
     label: FFT length
     dtype: int
-    hide: ${ 'part' if vlen == 1 else 'none' }
+      ##hide ${ 'part' if vlen == 1 else 'none' }
 
 inputs:
 -   domain: stream
@@ -25,6 +25,6 @@ outputs:
 
 templates:
     imports: import lte
-    make: lte.pss_symbol_selector_cvc(${fftl}, "$id")
+    make: lte.pss_symbol_selector_cvc(${fftl}, '${id}')
 
 file_format: 1
