--- a/grc/lte_remove_cp_cvc.block.yml
+++ b/grc/lte_remove_cp_cvc.block.yml
@@ -8,7 +8,7 @@ parameters:
 -   id: fftl
     label: FFT length
     dtype: int
-    hide: ${ 'part' if vlen == 1 else 'none' }
+    #hide ${ 'part' if vlen == 1 else 'none' }
 -   id: key
     label: tag key value
     dtype: string
@@ -24,6 +24,6 @@ outputs:
 
 templates:
     imports: import lte
-    make: lte.remove_cp_cvc(${fftl}, ${key}, "$id")
+    make: lte.remove_cp_cvc(${fftl}, ${key}, '${id}')
 
 file_format: 1
