--- a/grc/lte_rs_map_generator_m.block.yml
+++ b/grc/lte_rs_map_generator_m.block.yml
@@ -22,6 +22,6 @@ outputs:
 
 templates:
     imports: import lte
-    make: lte.rs_map_generator_m("cell_id", "pilots", ${N_rb_dl}, ${ant_port}, "$id")
+    make: lte.rs_map_generator_m("cell_id", "pilots", ${N_rb_dl}, ${ant_port}, '${id}')
 
 file_format: 1
